[gd_scene load_steps=10 format=3 uid="uid://bcp8hslvow0cl"]

[ext_resource type="Script" uid="uid://d1niamqcq5y47" path="res://Script/UI.gd" id="1_cl1om"]
[ext_resource type="FontFile" uid="uid://dp50g4x5l2jki" path="res://Assets/Font/kenvector_future.ttf" id="2_4mhbi"]
[ext_resource type="Texture2D" uid="uid://s150vgtey3qj" path="res://Assets/PNG/playerShip2_orange.png" id="3_bydni"]
[ext_resource type="AudioStream" uid="uid://cmnfjql4b6ui0" path="res://Assets/Audio/Game Over.wav" id="4_3oqyd"]
[ext_resource type="AudioStream" uid="uid://d4qhxqgosxpw" path="res://Assets/Audio/explode.wav" id="5_t73sc"]
[ext_resource type="PackedScene" uid="uid://dpl5vmahjb7xb" path="res://Scene/game_over_ui.tscn" id="7_so5x1"]

[sub_resource type="LabelSettings" id="LabelSettings_relsf"]
font = ExtResource("2_4mhbi")
font_size = 15
font_color = Color(1, 1, 1, 0.501961)

[sub_resource type="LabelSettings" id="LabelSettings_sp1os"]
font = ExtResource("2_4mhbi")
font_size = 20
font_color = Color(1, 1, 1, 0.501961)

[sub_resource type="LabelSettings" id="LabelSettings_b8b5u"]
font = ExtResource("2_4mhbi")
font_size = 25
font_color = Color(1, 1, 1, 0.501961)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cl1om")

[node name="Level" type="Node" parent="."]

[node name="Levels" type="Label" parent="Level"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 58.0
offset_right = 20.0
offset_bottom = 81.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_relsf")

[node name="LifeUI" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="LifeUI"]
self_modulate = Color(1, 1, 1, 0.666667)
offset_left = 55.0
offset_top = 52.0
offset_right = 125.0
offset_bottom = 113.0
texture = ExtResource("3_bydni")
expand_mode = 1
stretch_mode = 4

[node name="Life" type="Label" parent="LifeUI"]
offset_left = 130.0
offset_top = 58.0
offset_right = 163.0
offset_bottom = 106.0
label_settings = SubResource("LabelSettings_sp1os")

[node name="ScoreUI" type="Node" parent="."]

[node name="Score" type="Label" parent="ScoreUI"]
offset_left = 830.0
offset_top = 58.0
offset_right = 1000.0
offset_bottom = 90.0
label_settings = SubResource("LabelSettings_b8b5u")

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3oqyd")

[node name="GainScore" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_t73sc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Game Over UI" parent="CanvasLayer" instance=ExtResource("7_so5x1")]
visible = false
